testsuite/tests/properties/invalid_node_builder/bad_parent/test.lkt
from common import BaseExample, FooNode, Literal

@synthetic
class EmptyNode: FooNode {
}

class Example: BaseExample {
    @lazy prop: EmptyNode = EmptyNode.builder().build(1)
}
